# rust-playground

./: Cargo.toml  README.md
aoc-2021-01/src/: main.rs
aoc-2021-02/src/: main.rs
aoc-2021-03/: input.txt
aoc-2021-03/src/: main.rs
aoc-2021-04/src/: board.rs  main.rs
aoc-2021-05/src/: main.rs  seafloor.rs
aoc-2021-06/src/: main.rs
aoc-2021-07/src/: main.rs
aoc-2021-08/: Cargo.toml
aoc-2021-08/src/: main.rs
aoc-2021-09/src/: main.rs  seafloor.rs
aoc-2021-10/: Cargo.toml
aoc-2021-10/src/: main.rs  row.rs
aoc-2021-11/: Cargo.toml
aoc-2021-11/src/: grid.rs  main.rs
aoc-2021-12/: Cargo.toml
aoc-2021-12/src/: cave.rs  main.rs  path.rs  segment.rs
aoc-2021-13/: Cargo.toml
aoc-2021-13/src/: main.rs  position.rs
aoc-2021-14/: Cargo.toml
aoc-2021-14/src/: grid.rs  main.rs
calculator/: Cargo.toml
calculator-2/: Cargo.toml
calculator-2/src/: expression.rs  main.rs  operation.rs  operator.rs  token.rs
calculator/src/: expression.rs  main.rs  token.rs
chat-client/: Cargo.toml
chat-client/src/: main.rs
chat-server/: Cargo.toml
chat-server/src/: main.rs
game-1/: Cargo.toml
game-1/src/: main.rs
game-1/src/controls/: mod.rs
game-1/src/player/: mod.rs
game-1/src/position/: mod.rs
game-1/src/render/: mod.rs
game-1/src/world/: game_map.rs  map.txt  mod.rs  position.rs
rayon-1/: Cargo.toml
rayon-1/src/: main.rs
rocket-1/: Cargo.toml
rocket-1/src/: commands.rs  crud.rs  main.rs  state.rs  types.rs
wave/src/: lib.rs
