[workspace]

members = [
    "aoc-2021-01",
    "aoc-2021-02",
    "aoc-2021-03",
    "aoc-2021-04",
    "aoc-2021-05",
    "aoc-2021-06",
    "aoc-2021-07",
    "aoc-2021-08",
    "aoc-2021-09",
    "aoc-2021-10",
    "aoc-2021-11",
    "aoc-2021-12",
    "aoc-2021-13",
    "aoc-2021-14",
    "rayon-1",
    "rocket-1",
    "game-1"
]